# 05-chat

./: .gitignore  Cargo.toml  README.md  cliff.toml
chat_server/: README.md  app.yml
chat_server/src/: config.rs  lib.rs  main.rs
notify_server/: Cargo.toml  README.md  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
