[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
    "macros",
] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
